--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -9,7 +9,9 @@ author_profile: true
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
-<div class="wordwrap"> *Equal Contribution. †Corresponding Author.</div>
+<div class="wordwrap"> 
+  <strong>*Equal Contribution; †Corresponding Author.</strong>
+</div>
 
 {% include base_path %}
 
