--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -10,7 +10,7 @@ author_profile: true
 {% endif %}
 
 <div class="wordwrap"> 
-  <strong>*Equal Contribution; †Corresponding Author.</strong>
+  <strong>*Equal Contribution; †Corresponding Author/Mentor.</strong>
 </div>
 
 {% include base_path %}
